# SOUSAphone

./: .coverage  .gitignore  AST_LORA_SUCCESS.md  LICENSE  README.md  SWEEP_STARTED.md  TRAINING_RESULTS_10EPOCH.md  analyze_confusion.py  evaluate.py  initial-study.md  pyproject.toml  test_all_models_lora.py  test_ast_lora.py  test_config.py  test_config_simple.py  test_config_small.py  train.py  train_feature_model.py  verify_config.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: full.yaml  medium.yaml  mini.yaml  small.yaml  tiny.yaml
configs/model/: ast.yaml  ast_fixed.yaml  beats.yaml  beats_fixed.yaml  efficientat.yaml  efficientat_fixed.yaml  feature_inference.yaml  htsat.yaml  onset_transformer.yaml
configs/strategy/: adalora.yaml  full_finetune.yaml  ia3.yaml  lora.yaml
docs/: sweep_guide.md
docs/plans/: 2026-01-29-sousa-training-pipeline-design.md  2026-01-31-implementation-plan.md  2026-01-31-training-pipeline-implementation-design.md  2026-02-16-multi-soundfont-dataset-design.md  2026-02-19-hf-space-demo-design.md  2026-02-19-hf-space-demo-plan.md
results/sweep/: ast_adalora_aug_tiny_20260201_102523.json  ast_adalora_aug_tiny_20260201_110100.json  ast_adalora_aug_tiny_20260201_132352.json  ast_adalora_noaug_tiny_20260201_102533.json  ast_adalora_noaug_tiny_20260201_111807.json  ast_adalora_noaug_tiny_20260201_134132.json  ast_ia3_aug_tiny_20260201_102544.json  ast_ia3_aug_tiny_20260201_113429.json  ast_ia3_aug_tiny_20260201_140054.json  ast_ia3_noaug_tiny_20260201_102554.json  (+50 more)
scripts/: analyze_sweep.py  generate_metadata.py  run_sweep.py
sousa/: __init__.py
space/: README.md  app.py  requirements.txt  visualizations.py
(+46 files in other folders)
