[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sousa"
version = "0.1.0"
description = "Training pipeline for drum rudiment classification using PyTorch Lightning and Transformers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Zak Keown"},
]
keywords = [
    "drum-rudiments",
    "audio-classification",
    "pytorch-lightning",
    "transformers",
    "sousa",
]
dependencies = [
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "pytorch-lightning>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "wandb>=0.16.0",
    "peft>=0.8.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "torchmetrics>=1.2.0",
    "pandas>=2.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sousa*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=sousa --cov-report=term-missing"

[project.urls]
Repository = "https://github.com/zakkeown/SOUSAphone"
